--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "external-widget",
   "version": "1.0.0",
-  "author": "Ekaterina Zaikina",
+  "author": "Ekaterina Zaikina <katriyna@gmail.com>",
   "files": [
     "dist"
   ],
@@ -86,5 +86,9 @@
   },
   "engines": {
     "node": ">=6.0.0"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/katriyna/hub-external-widget"
   }
 }
