package.json: renamed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "external-widget",
+  "name": "hub-external-widget",
   "version": "1.0.0",
   "author": "Ekaterina Zaikina <katriyna@gmail.com>",
   "files": [
