--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hub-external-widget",
-  "version": "1.0.1",
+  "version": "1.0.5",
   "author": "Ekaterina Zaikina <katriyna@gmail.com>",
   "files": [
     "dist"
@@ -17,7 +17,7 @@
   "scripts": {
     "postinstall": "npm rebuild node-sass",
     "create-component": "yo @jetbrains/ring-ui:react --path $npm_package_config_components",
-    "build": "webpack -p --devtool sourcemap",
+    "build": "webpack -d --devtool sourcemap",
     "test": "karma start",
     "lint": "eslint . --quiet=true && npm run stylelint",
     "stylelint": "stylelint --ignore-path .gitignore **/*.css",
@@ -88,7 +88,7 @@
     "node": ">=6.0.0"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/katriyna/hub-external-widget"
+    "type": "git",
+    "url": "https://github.com/katriyna/hub-external-widget"
   }
 }
