--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hub-external-widget",
-  "version": "1.0.7",
+  "name": "hub-externally-embedded-widget",
+  "version": "0.0.1",
   "author": "Ekaterina Zaikina <katriyna@gmail.com>",
   "files": [
     "dist"
