--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
   },
   "dependencies": {
     "@jetbrains/babel-preset-jetbrains": "1.0.1",
-    "@jetbrains/icons": "1.12.0",
-    "@jetbrains/logos": "0.1.6",
-    "@jetbrains/ring-ui": "^1.0.30",
+    "@jetbrains/icons": "3.1.2",
+    "@jetbrains/logos": "1.1.4",
+    "@jetbrains/ring-ui": "2.0.12",
     "angular-gettext-cli": "1.2.0",
     "angular-gettext-loader": "1.0.1",
     "babel-core": "6.26.3",
     "babel-loader": "7.1.2",
     "babel-polyfill": "6.26.0",
+    "classnames": "^2.2.6",
     "css-loader": "0.28.7",
     "fecha": "2.3.3",
     "html-loader": "0.4.4",
@@ -52,6 +53,7 @@
     "react-dom": "16.4.2",
     "react-iframe": "^1.5.0",
     "redbox-react": "1.3.6",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "4.28.1",
     "webpack-dev-server": "3.1.14",
     "websandbox": "^0.5.2"
